feat: fix lombok